<resources>
    <string name="app_name">JobCompare6300</string>
    <string name="main_menu">Main Menu</string>
    <string name="enter_or_edit_current_job">Enter or Edit Current Job</string>
    <string name="enter_job_offer">Enter Job Offer</string>
    <string name="adjust_comparison_settings">Adjust Comparison Settings</string>
    <string name="compare_jobs_offers">Compare Job Offers</string>
    <string name="compare_jobs_offers_disabled">Compare Job Offers (Disabled)</string>
    <string name="current_job">Current Job</string>
    <string name="title">Title</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="location_cost_of_living">Location Cost of Living</string>
    <string name="yearly_salary">Yearly Salary</string>
    <string name="yearly_bonus">Yearly Bonus</string>
    <string name="weekly_telework_days">Weekly Telework Days</string>
    <string name="yearly_leave_time_days">Yearly Leave Time Days</string>
    <string name="number_of_company_shares">Number of Company Shares</string>
    <string name="submit_current_job">Submit Current Job</string>
    <string name="back_to_main_menu">Back to Main Menu</string>
    <string name="save_job_offer">Save Job Offer</string>
    <string name="comparison_settings">Comparison Settings</string>
    <string name="_1">1</string>
    <string name="weight_of_yearly_salary">Weight of yearly salary</string>
    <string name="yearly_bonus_weight">Yearly bonus weight</string>
    <string name="textview">TextView</string>
    <string name="assign_weights">Assign Weights</string>
    <string name="cancel">Cancel</string>
    <string name="leave_time">Leave Time</string>
    <string name="telework_days_weight">Telework days weight</string>
    <string name="shares_offered">Shares Offered</string>
    <string name="leave_time_weight">Leave time weight</string>
    <string name="shares_offered_weight">Shares offered weight</string>
    <string name="job_saved_successfully">Job Saved Successfully</string>
    <string name="enter_another_offer">Enter Another Offer</string>
    <string name="compare">Compare</string>
    <string name="compare_job_offers">Compare Job Offers</string>
    <string name="none">None</string>
    <string name="compare_more_jobs">Compare More Jobs</string>
    <string name="job_1">Job 1</string>
    <string name="job_2">Job 2</string>
    <string name="score">Score</string>
</resources>