<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/compare_job_offers" />

        <LinearLayout
            android:id="@+id/currentJobID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/currentJobTitleID"
                    android:layout_width="214dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="291dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/title"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/currentJobCompanyID"
                    app:layout_constraintEnd_toStartOf="@+id/currentJobScoreID"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/currentJobCompanyID"
                    android:layout_width="223dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="261dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/company"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/currentJobScoreID"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/currentJobTitleID" />

                <TextView
                    android:id="@+id/currentJobScoreID"
                    android:layout_width="101dp"
                    android:layout_height="42dp"
                    android:layout_marginTop="9dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/score"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:orientation="horizontal">

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="14dp"
                android:layout_weight="1"
                android:background="@color/purple_500" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="451dp"
            android:orientation="horizontal">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listOfJobOffersID"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/compareJobsButtonID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/compare" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/returnToMainMenuID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main_menu" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>